@@ -1,3 +1,15 @@
+2012-07-16  Yong Li  <yoli@rim.com>
+
+        [BlackBerry] Improve about:memory page
+        https://bugs.webkit.org/show_bug.cgi?id=87676
+
+        Reviewed by Rob Buis.
+
+        Add a table for process memory usage summary for easy read.
+
+        * WebCoreSupport/AboutData.cpp:
+        (WebCore::memoryPage):
+
 2012-07-16  Kihong Kwon  <kihong.kwon@samsung.com>
 
         Remove setController from BatteryClient
